[package]
name = "bitcoin-wallet-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.32"
secp256k1 = { version = "0.29", features = ["rand-std"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
anyhow = "1"
